fix: flower alignment

--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -27,34 +27,11 @@
         color: #543300;
         letter-spacing: 2px;
 
-        // &.active {
-        //   text-decoration: underline;
-        //   text-decoration-color: #da2925;
-        //   text-decoration-thickness: 0.2rem;
-        //  text-underline-offset: 0.4rem;
-        // }
-
-        &::after {
-          content: "";
-          position: absolute;
-          width: 100%;
-          height: 0.2rem;
-          bottom: -0.4rem;
-          left: 0;
-          background-color: #da2925;
-          border-radius: 20%;
-          visibility: hidden;
-          -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-          -webkit-transition: all 0.3s ease-in-out 0s;
-          transition: all 0.3s ease-in-out 0s;
-        }
         &.active {
-          &::after {
-            visibility: visible;
-            -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-          }
+          text-decoration: underline;
+          text-decoration-color: #da2925;
+          text-decoration-thickness: 0.2rem;
+          text-underline-offset: 0.4rem;
         }
       }
     }
